# torajs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md  install.sh  main  mandel_split2  rust-toolchain.toml
crates/torajs-abort/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-abort/benches/: abort.rs
crates/torajs-abort/src/: lib.rs
crates/torajs-abort/tests/: abort_smoke.rs
crates/torajs-anyvalue/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-anyvalue/benches/: anyvalue.rs
crates/torajs-anyvalue/src/: arith.rs  coerce.rs  compare.rs  ffi.rs  inspect.rs  lib.rs
crates/torajs-anyvalue/tests/: perf_gate.rs
crates/torajs-arr/: BUDGETS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/torajs-arr/benches/: arr.rs
crates/torajs-arr/src/: alloc.rs  any.rs  drop.rs  from_string.rs  grow.rs  iter.rs  join.rs  layout.rs  lib.rs  ops.rs  pool.rs  print.rs  props.rs  slice.rs  str_bridge.rs  transform.rs
crates/torajs-arr/tests/: perf_gate.rs
crates/torajs-bigint/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-bigint/benches/: bigint.rs
crates/torajs-bigint/src/: arith.rs  bitwise.rs  compare.rs  construct.rs  divmod.rs  drop.rs  internal.rs  layout.rs  lib.rs  mul.rs  shift.rs  str_bridge.rs  tostring.rs
crates/torajs-bigint/tests/: perf_gate.rs  spec_cases.rs
crates/torajs-capture-box/: BUDGETS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/torajs-capture-box/benches/: capture_box.rs
crates/torajs-capture-box/src/: lib.rs
crates/torajs-capture-box/tests/: lifecycle.rs  perf_gate.rs
crates/torajs-cli/: Cargo.toml  README.md  build.rs
crates/torajs-cli/src/: cache_keys.rs  cmd_build.rs  cmd_cache.rs  cmd_debug.rs  cmd_fmt.rs  cmd_lint.rs  cmd_run.rs  lsp.rs  lsp_bench.rs  main.rs  repl.rs  util.rs
crates/torajs-codec-hex/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-codec-hex/benches/: codec_hex.rs
crates/torajs-codec-hex/src/: lib.rs
crates/torajs-codec-hex/tests/: hex_compat.rs  perf_gate.rs
crates/torajs-collections/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-collections/benches/: collections.rs
crates/torajs-collections/src/: create.rs  delete.rs  drop.rs  eq.rs  hash.rs  iter.rs  layout.rs  lib.rs  mutate.rs  probe.rs  query.rs
crates/torajs-core/: Cargo.toml  README.md  build.rs
crates/torajs-core/src/: ast.rs  check.rs  formatter.rs  lexer.rs  lib.rs  linter.rs  modules.rs  parser.rs  ssa.rs  ssa_inkwell.rs  ssa_lower.rs
crates/torajs-cycle/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-cycle/benches/: cycle.rs
crates/torajs-cycle/src/: arr.rs  buffer.rs  collect.rs  layout.rs  lib.rs
crates/torajs-date/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-date/benches/: date.rs
crates/torajs-date/src/: api.rs  civil.rs  getters.rs  lib.rs  parse.rs  tm.rs
crates/torajs-dynobj/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-dynobj/benches/: dynobj.rs
crates/torajs-dynobj/src/: alloc.rs  define.rs  delete.rs  drop.rs  get.rs  has.rs  layout.rs  lib.rs  probe.rs  resize.rs  set.rs
crates/torajs-embed/: Cargo.toml  README.md
crates/torajs-embed/include/: tora.h
crates/torajs-embed/src/: lib.rs
crates/torajs-fetch/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-fetch/benches/: fetch.rs
crates/torajs-fetch/src/: lib.rs  native.rs
crates/torajs-fs/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-fs/benches/: fs.rs
crates/torajs-fs/src/: lib.rs
crates/torajs-meta/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-meta/benches/: meta.rs
crates/torajs-meta/src/: classmeta.rs  fnprops.rs  lib.rs  reflect.rs
crates/torajs-microtask/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-microtask/benches/: microtask.rs
crates/torajs-microtask/src/: lib.rs
crates/torajs-microtask/tests/: perf_gate.rs  queue.rs
crates/torajs-mmalloc/: Cargo.toml
crates/torajs-mmalloc/src/: extern_api.rs  large.rs  lib.rs  page.rs  size_class.rs
crates/torajs-num/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-num/benches/: num.rs
crates/torajs-num/src/: format.rs  layout.rs  lib.rs  math.rs  object_is.rs  parse.rs  predicates.rs  print_err.rs  str_bridge.rs  to_str.rs  tostring.rs
crates/torajs-num/tests/: perf_gate.rs  spec_compat.rs
crates/torajs-panic/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-panic/src/: lib.rs
crates/torajs-panic/tests/: exit_code.rs
crates/torajs-playground-api/: Cargo.toml  README.md
crates/torajs-playground-api/src/: main.rs
crates/torajs-pool/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-pool/benches/: pool.rs
crates/torajs-pool/src/: lib.rs
crates/torajs-pool/tests/: perf_gate.rs
crates/torajs-process/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-process/benches/: process.rs
crates/torajs-process/src/: lib.rs
crates/torajs-promise/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-promise/benches/: promise.rs
crates/torajs-promise/src/: combinator.rs  layout.rs  lib.rs  micro.rs  pool.rs  state.rs  then.rs
crates/torajs-rc/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-rc/benches/: rc.rs
crates/torajs-rc/src/: freeze.rs  lib.rs
crates/torajs-rc/tests/: perf_gate.rs
crates/torajs-regex/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-regex/benches/: regex.rs
crates/torajs-regex/src/: charclass.rs  compiler.rs  flags.rs  lib.rs  node.rs  program.rs  resolve.rs  ucd.rs  utf8.rs
crates/torajs-runtime/: Cargo.toml  README.md
crates/torajs-runtime/src/: lib.rs  runtime_bigint.c  runtime_capture_box.c  runtime_cycle.c  runtime_date.c  runtime_fetch.c  runtime_libc_bridge.c  runtime_map.c  runtime_promise.c  runtime_regex.c  runtime_str.c  runtime_weakmap.c  (+2 more)
crates/torajs-str/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/torajs-syscall/: Cargo.toml  README.md
(+1251 files in other folders)
