[workspace]
resolver = "3"
members = [
    "crates/torajs-pool",
    "crates/torajs-ucd",
    "crates/torajs-rc",
    "crates/torajs-anyvalue",
    "crates/torajs-throw",
    "crates/torajs-str",
    "crates/torajs-num",
    "crates/torajs-bigint",
    "crates/torajs-arr",
    "crates/torajs-dynobj",
    "crates/torajs-collections",
    "crates/torajs-weak",
    "crates/torajs-cycle",
    "crates/torajs-microtask",
    "crates/torajs-promise",
    "crates/torajs-regex",
    "crates/torajs-fetch",
    "crates/torajs-runtime",
    "crates/torajs-core",
    "crates/torajs-cli",
    "crates/torajs-embed",
    "crates/torajs-playground-api",
    "labs/0002-inkwell-spike",
    "bench/harness",
    "conformance/runner",
    "conformance/test262-runner",
]

# Centralized metadata for sub-crates that opt-in via `<key>.workspace =
# true` in their own `[package]`. See docs/architecture-rewrite.md for
# the full layered-crate plan + per-crate Cargo.toml template.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/torajs"
homepage = "https://github.com/goliajp/torajs"
authors = ["GOLIA K.K."]

# Pinned shared dev/runtime deps. Sub-crates reference with
# `<dep> = { workspace = true }`; root bump rolls through the workspace
# in one commit.
[workspace.dependencies]
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
] }

# Sub-crates opt in via `[lints] workspace = true`. Existing crates
# without the opt-in are unaffected (kept their pre-existing lint
# state) so this addition is non-breaking. New sub-crates land
# warnings-clean.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

# Phase B: tr binary itself runs at max-opt — affects compile_ms only.
# LTO=fat collapses inkwell + tr crates into a single codegen unit so
# Rust call sites into LLVM bridge can be cross-crate inlined. Demo
# binary perf (the output of `tr build`) is unaffected by this — that's
# determined by tr's pass to LLVM (`--opt O3` by default; see
# main.rs:179).
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# panic = "abort" is required for the no_std staticlibs in
# crates/torajs-rc + crates/torajs-anyvalue + crates/torajs-throw
# (unwinding panics aren't supported without std) AND
# independently good for vision #1 perf — removes the per-fn
# unwind tables and a tier of LLVM codegen complexity, shrinking
# the AOT user-binary by ~10% across the bench corpus.
panic = "abort"

# panic = "abort" on dev for symmetry with release — `cargo test`
# (no --release) inherits from this profile. (panic is "ignored"
# on [profile.test] and [profile.bench] per cargo design; not
# settable there.)
[profile.dev]
panic = "abort"

# Vanilla-Rust honest baseline. Mirrors mailrs's pattern. Use with
# `cargo build --profile release-vanilla` to compare against
# `[profile.release]`'s fat-LTO + codegen-units=1 + strip on the
# same code. Lets us answer "is the perf-first profile actually
# delivering?" with a measurement, not a guess. NOT for deploy.
[profile.release-vanilla]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 3
strip = false

# hardev devperf #1 — fast iteration profile. Used ONLY for functional
# iteration + the conformance gate (conformance/runner builds tr with
# `--profile iter`). opt-level / LTO / codegen-units do NOT change
# program semantics (textbook invariant), so an `iter`-built tr is
# byte-for-byte stdout-equivalent to a `release`-built tr on every
# conformance case — same coverage, same byte-equal verdict (629/0/1
# proves it empirically). bench + final ship STILL use `--release`
# (fat-LTO ship binary); bench runners hardcode target/release/tr, a
# physically separate artifact from target/iter/tr, so they are
# structurally unaffected. Knobs chosen for fast compile while keeping
# the conformance run fast enough: no whole-program LTO, max codegen
# parallelism, opt-level=1 (NOT 0 — a -O0 tr would make conformance
# case execution too slow, a bad trade).
[profile.iter]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 1
strip = false
