[package]
name = "torajs-bigint"
description = "Self-hosted arbitrary-precision integer (BigInt) substrate for the torajs AOT TypeScript runtime. Sign-and-magnitude representation with u64-limb little-endian magnitude; schoolbook + Karatsuba mul, bitwise + shift ops, decimal/hex/i64 parse. Layer-2 substrate (`docs/architecture-rewrite.md` P3.3). no_std-friendly, 0 runtime deps."
keywords = ["torajs", "bigint", "arbitrary-precision", "integer", "no-std"]
categories = ["mathematics", "no-std"]
readme = "README.md"
documentation = "https://docs.rs/torajs-bigint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

# Dual emit: `rlib` for cargo workspace builds + unit tests; `staticlib`
# emits libtorajs_bigint.a so ssa_inkwell can link it into every
# `tr build` AOT user binary alongside the other Layer-1+ staticlibs.
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
# 0 runtime deps. Cross-crate calls use `extern "C"` symbols resolved
# at link time (e.g. __torajs_rc_dec from libtorajs_rc.a). libc free
# is declared directly as `unsafe extern "C" { fn free }` per the
# torajs-str pattern.

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bigint"
harness = false
