[package]
name = "torajs-cli"
version = "0.1.0"
edition = "2024"

# v0.3 #6 Graduation — `tr` binary crate. Owns the CLI dispatch,
# `tr lsp` Language Server, and `tr lsp-bench` latency harness.
# Compiler internals live in torajs-core.

[[bin]]
name = "tr"
path = "src/main.rs"

[dependencies]
torajs-core = { path = "../torajs-core" }

# v0.3 #5 LSP — JSON-RPC framing + LSP type definitions for the
# `tr lsp` subcommand. Dev-tooling dep, not in any runtime path.
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
