[package]
name = "torajs-codec-hex"
version = "0.1.0"
edition = "2024"

# F.1 (2026-05-25) — torajs Phase 2 F 族 first crate.
# Replaces the `hex 0.4` community dep with a metal-level minimal
# encode/decode implementation. 0 dependencies; aligns with vision
# priority #4 "0 deps" and the deps-tree v0.1 F 族 spec.
#
# Surface kept small intentionally — only encode/decode lower-case
# variants that the torajs workspace actually uses. Upper-case +
# streaming variants can be added when a caller needs them.

[dependencies]

[dev-dependencies]
