[package]
name = "torajs-core"
version = "0.1.0"
edition = "2024"

# v0.3 #6 Graduation — compiler internals as a library crate. Owns
# the lex / parse / desugar / typecheck / SSA-lower / inkwell-emit
# pipeline. Depends on torajs-runtime for the C source files
# embedded into each `tr build` artifact.

[lib]
path = "src/lib.rs"

[dependencies]
# Inkwell drives LLVM 22 (brew) for both `tr build` AOT and `tr run`
# AOT-with-cache. Build needs LLVM_SYS_221_PREFIX=/opt/homebrew/opt/llvm
# in the environment.
inkwell = { version = "0.9", features = ["llvm22-1-prefer-dynamic"] }

torajs-runtime = { path = "../torajs-runtime" }
# Layer-1 substrate: rc_inc / rc_dec / HeapHeader. Pulled in for both
# (a) the rlib (so torajs-core can call rc_inc directly from Rust if
# needed later) and (b) the staticlib that build.rs copies into
# OUT_DIR and that `ssa_inkwell::compile()` links into every
# `tr build` user-binary alongside the runtime_*.c object files.
torajs-rc = { path = "../torajs-rc" }
# Layer-1 substrate: AnyBox heap value (boxed Type::Any). Same dual
# rlib+staticlib usage as torajs-rc above.
torajs-anyvalue = { path = "../torajs-anyvalue" }
# Layer-1 substrate: native-error factory registry + throw_range/
# type_error helpers. Same dual rlib+staticlib usage.
torajs-throw = { path = "../torajs-throw" }
# Layer-2 substrate: Str + Substr heap types + small-Str pool +
# per-op string fns. Pulled in for the dual rlib+staticlib pattern
# so `lib<crate>.a` exists for build.rs's env-var emit.
torajs-str = { path = "../torajs-str" }
# Layer-2 substrate: Number primitives + Math intrinsics. Same dual
# rlib+staticlib usage so libtorajs_num.a links into every `tr build`
# user binary.
torajs-num = { path = "../torajs-num" }
# Layer-2 substrate: BigInt arbitrary-precision integer (P3.3). Same
# dual rlib+staticlib usage; libtorajs_bigint.a co-links so
# __torajs_bigint_drop / drop_rc / etc resolve at `tr build`.
torajs-bigint = { path = "../torajs-bigint" }
