[package]
name = "torajs-core"
version = "0.1.0"
edition = "2024"

# v0.3 #6 Graduation — compiler internals as a library crate. Owns
# the lex / parse / desugar / typecheck / SSA-lower / inkwell-emit
# pipeline. Depends on torajs-runtime for the C source files
# embedded into each `tr build` artifact.

[lib]
path = "src/lib.rs"

[dependencies]
# Inkwell drives LLVM 22 (brew) for both `tr build` AOT and `tr run`
# AOT-with-cache. Build needs LLVM_SYS_221_PREFIX=/opt/homebrew/opt/llvm
# in the environment.
inkwell = { version = "0.9", features = ["llvm22-1-prefer-dynamic"] }

torajs-runtime = { path = "../torajs-runtime" }
# Layer-1 substrate: rc_inc / rc_dec / HeapHeader. Pulled in for both
# (a) the rlib (so torajs-core can call rc_inc directly from Rust if
# needed later) and (b) the staticlib that build.rs copies into
# OUT_DIR and that `ssa_inkwell::compile()` links into every
# `tr build` user-binary alongside the runtime_*.c object files.
torajs-rc = { path = "../torajs-rc" }
# Layer-1 substrate: AnyBox heap value (boxed Type::Any). Same dual
# rlib+staticlib usage as torajs-rc above.
torajs-anyvalue = { path = "../torajs-anyvalue" }
# Layer-1 substrate: native-error factory registry + throw_range/
# type_error helpers. Same dual rlib+staticlib usage.
torajs-throw = { path = "../torajs-throw" }
# Layer-2 substrate: Str + Substr heap types + small-Str pool +
# per-op string fns. Pulled in for the dual rlib+staticlib pattern
# so `lib<crate>.a` exists for build.rs's env-var emit.
torajs-str = { path = "../torajs-str" }
# Layer-2 substrate: Number primitives + Math intrinsics. Same dual
# rlib+staticlib usage so libtorajs_num.a links into every `tr build`
# user binary.
torajs-num = { path = "../torajs-num" }
# Layer-2 substrate: BigInt arbitrary-precision integer (P3.3). Same
# dual rlib+staticlib usage; libtorajs_bigint.a co-links so
# __torajs_bigint_drop / drop_rc / etc resolve at `tr build`.
torajs-bigint = { path = "../torajs-bigint" }
# Layer-3: Array<T> + Array<Any> substrate (P4.1). Dual rlib+staticlib;
# libtorajs_arr.a co-links so __torajs_arr_drop resolves at `tr build`.
torajs-arr = { path = "../torajs-arr" }
# Layer-3: dynamic-property object substrate (P4.2). Dual rlib+staticlib;
# libtorajs_dynobj.a co-links so __torajs_dynobj_alloc (and later
# get/set/define/has/delete/drop in subsequent P4.2 sub-steps) resolves
# at `tr build`.
torajs-dynobj = { path = "../torajs-dynobj" }
# Layer-3: strong-ref collections — Map<K,V> + Set<K> + MapIter (P4.3).
# Same dual rlib+staticlib pattern; libtorajs_collections.a co-links so
# __torajs_map_create (and successive map_size/has/get/set/delete/clear/
# drop/iter in P4.3-b..-i) resolves at `tr build`. Weak family lives in
# a separate torajs-weak crate (P4.3').
torajs-collections = { path = "../torajs-collections" }
# Layer-3: weak-ref family — WeakRef + WeakMap + WeakSet + shared
# observer registry (P4.3'). Dual rlib+staticlib; libtorajs_weak.a
# co-links so registry register/deregister + target_dying + the three
# owner-side surfaces resolve at `tr build`. Explicit dep here forces
# cargo's build order so torajs-core's `include_bytes!` reads a fresh
# libtorajs_weak.a.
torajs-weak = { path = "../torajs-weak" }
# Layer-3: Bacon-Rajan trial-deletion cycle collector (P4.4). Dual
# rlib+staticlib; libtorajs_cycle.a co-links so cycle_buffer /
# cycle_unbuffer / cycle_collect / cycle_at_exit_drain resolve at
# `tr build`. Same dep-order rationale as torajs-weak.
torajs-cycle = { path = "../torajs-cycle" }
# Layer-3: microtask queue (P5). Dual rlib+staticlib; libtorajs_microtask.a
# co-links so __torajs_microtask_enqueue/run_until_idle/pending_count
# resolve at `tr build` (called from torajs-promise + ssa_lower-emitted
# microtask dispatchers). Same dep-order rationale as torajs-cycle.
torajs-microtask = { path = "../torajs-microtask" }
# Layer-3: Promise<T> surface (P6.1). Dual rlib+staticlib; libtorajs_promise.a
# co-links so the full Promise API (alloc / pool / drop / resolve / reject /
# .then / .catch / .finally / .all / .allSettled / .race / .any /
# queueMicrotask) resolves at `tr build`. Same dep-order rationale.
torajs-promise = { path = "../torajs-promise" }
# Layer-3: runtime metadata + reflection — fnprops side table +
# class/proto registries + getPropertyDescriptor / getPrototypeOf
# (P7.g). Dual rlib+staticlib; libtorajs_meta.a co-links so
# fnprops_set/get + proto_register/get + class_register/get +
# get_property_descriptor / get_proto_of_any resolve at `tr build`.
torajs-meta = { path = "../torajs-meta" }
# Layer-3: process surface — exit / cwd / env / argv / platform /
# stdout.write / stderr.write (P7.h-proc). Dual rlib+staticlib;
# libtorajs_process.a co-links so process_* fns resolve at
# `tr build`. Same dep-order rationale as torajs-meta.
torajs-process = { path = "../torajs-process" }
